# simple-message-queue

./: Dockerfile  Dockerfile.test  Dockerfile.worker  README.md  docker-compose.yaml  pyproject.toml
app/: config.py  main.py
app/tasks/: config.py  router.py  tasks.py
tests/: conftest.py  test_task.py
